# KittenTTS

./: .gitignore  README.md  environment.yml  example.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: uv-lock-matrix.yml
docs/devlog/: 2026-03-03-uv-migration.md
kittentts/: __init__.py  get_model.py  onnx_model.py  preprocess.py
scripts/: prefetch_kittentts.py
tests/: test_imports.py  test_metadata.py  test_phonemizer.py
