[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kittentts"
version = "0.8.1"
description = "Ultra-lightweight text-to-speech model with just 15 million parameters"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    {name = "KittenML"}
]
keywords = ["text-to-speech", "tts", "speech-synthesis", "neural-networks", "onnx"]
classifiers = [
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "num2words",
    "espeakng_loader",
    "phonemizer-fork>=3.3.2",
    "onnxruntime",
    "soundfile",
    "numpy>=1.26.4",
    "huggingface_hub",
]

[project.urls]
Homepage = "https://github.com/kittenml/kittentts"
Repository = "https://github.com/kittenml/kittentts"
Issues = "https://github.com/kittenml/kittentts/issues"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["kittentts"]
include = [
    "kittentts/*.json",
    "kittentts/*.txt",
    "kittentts/*.onnx",
]

[tool.hatch.build.targets.sdist]
include = [
    "kittentts/**/*.py",
    "kittentts/*.json",
    "kittentts/*.txt",
    "kittentts/*.onnx",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
