[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kittentts"
version = "0.8.1"
description = "Ultra-lightweight text-to-speech model with just 15 million parameters"
readme = "README.md"
requires-python = ">=3.8,<3.14"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    {name = "KittenML"}
]
keywords = ["text-to-speech", "tts", "speech-synthesis", "neural-networks", "onnx"]
classifiers = [
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "num2words",
    "espeakng_loader",
    "phonemizer-fork>=3.3.2",
    "onnxruntime<=1.19.2; python_version < '3.10'",
    "onnxruntime>=1.23.2,<1.24.0; python_version >= '3.10' and python_version < '3.11'",
    "onnxruntime>=1.24.0; python_version >= '3.11'",
    "soundfile",
    "numpy>=1.24.4,<2.0; python_version < '3.9'",
    "numpy>=1.26.4,<2.0; python_version >= '3.9' and python_version < '3.13'",
    "numpy>=2.1.0; python_version >= '3.13'",
    "huggingface_hub<1.0.0; python_version < '3.9'",
    "huggingface_hub; python_version >= '3.9'",
]

[project.urls]
Homepage = "https://github.com/kittenml/kittentts"
Repository = "https://github.com/kittenml/kittentts"
Issues = "https://github.com/kittenml/kittentts/issues"

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["kittentts"]
include = [
    "kittentts/*.json",
    "kittentts/*.txt",
    "kittentts/*.onnx",
]

[tool.hatch.build.targets.sdist]
include = [
    "kittentts/**/*.py",
    "kittentts/*.json",
    "kittentts/*.txt",
    "kittentts/*.onnx",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
